# formulatech-hacks

./: .gitignore  README.md  biome.json  lefthook.yml  mise.toml  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tailwind.config.js
apps/www/: astro.config.mjs  package.json  vercel.json
apps/www/public/: _headers  robots.txt
apps/www/scripts/: optimize-images.mjs
apps/www/src/assets/headshots/: IMG_2801 - Akriti Batra.heic  IMG_2884 - Maira Khawaja.heic  ariel.heic
apps/www/src/components/: About.tsx  ComingSoon.astro  Countdown.astro  Countdown.tsx  Dashboard.tsx  DashboardSidebar.tsx  FAQ.tsx  FontTest.tsx  Footer.astro  Footer.jsx  Hero.tsx  Navigate.astro  ReactComponent.tsx  Signup.tsx  Sponsors.tsx  Teams.tsx  Welcome.astro  navigate.tsx
apps/www/src/layouts/: Layout.astro
apps/www/src/lib/api/: client.ts  types.ts
apps/www/src/pages/: dashboard.astro  hero.astro  index.astro  signup.astro  sponsors.astro
apps/www/src/styles/: Hero.css  global.css
backend/: __init__.py  app.py  config.py  extensions.py  factory.py  run.py
backend/data/: seed.json
backend/middleware/: cors.py  request_id.py
backend/models/: __init__.py  registration.py  sponsor.py  team.py  user.py
backend/routes/: __init__.py  auth.py  health.py  registrations.py  sponsors.py  teams.py
backend/scripts/: load_seed.py
backend/store/: database.py
backend/utils/: responses.py  validators.py
